fixed some layout issues

--- a/public/styles/template.css
+++ b/public/styles/template.css
@@ -3,17 +3,17 @@
     margin: 0;
     padding: 0;
     border: 0;
-  }
-  
-  .content{
+}
+
+.content{
     height: 100vh;
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
-  .main{
+}
+
+.main{
     width: 97.5vw;
     height: 97.5vh;
     border-radius: 25px;
@@ -22,9 +22,9 @@
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
-  }
-  
-  .objHolder {
+}
+
+.objHolder {
     transition: 0.3s;
     box-shadow: 0px 0px 20px var(--accent-color);
     border: 3px solid var(--accent-color);
@@ -35,22 +35,23 @@
     position: relative;
     display: flex;
     align-items: flex-end;
-  }
+}
 
-  .objImg{
+.objImg{
     position: absolute;
     height: 100%;
     width: 100%;
-  }
+}
 
-  .gradient {
+.gradient {
     background: -webkit-linear-gradient(45deg, var(--primary-light), var(--primary-dark));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-shadow: 0px 0px 10px #552bad;; overflow: visible;
-  }
-  
-  #objs{
+    text-shadow: 0px 0px 10px #552bad;
+    overflow: visible;
+}
+
+#objs{
     z-index: 9999;
     width: 100%;
     display: flex;
@@ -59,32 +60,32 @@
     flex-wrap: wrap;
     overflow-y: scroll;
     justify-content: center;
-  }
+}
 
-  .objFrame{
+.objFrame{
     z-index: 239832193312893218932189312893128923189; /* woa */
     background-color: white;
     width: 100%;
     height: calc(100% - 41.5px);
-  }
+}
 
-  .objHolder:hover{
+.objHolder:hover{
     box-shadow: 0px 0px 20px var(--primary-light);
-    width: 205px;
-    height: 205px;
-  }
+    transform: scale(1.025);
+}
 
-  img:hover{
+img:hover{
     background-color: var(--accent-color);
-  }
+}
 
-  select{
+select{
     font-size: 16px;
     background: var(--accent-color);
     border-radius: 20px;
     width: min-content;
-  }
-  button {
+}
+
+button {
     padding: 15px;
     transition: 0.5s;
     margin: 5px;
@@ -93,7 +94,8 @@
     font-weight: bold;
     width: 80px;
     box-shadow: 0px 0px 15px var(--primary-mid);
-  }
-  button:hover{
+}
+
+button:hover{
     box-shadow: 0px 0px 20px var(--primary-light);
-  }
+}
